tests/spec/emit/snapshots/format_string_escaped_quote_before_interp.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  
  fn test() {
    let x = 7;
    fmt.Println(f"prefix \", {x}")
  }
---
package main

import "fmt"

func test() {
	x := 7
	fmt.Printf("prefix \", %d\n", x)
}
