tests/spec/emit/snapshots/format_string_eval_order_captured.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn bump(i: mut Ref<int>) -> int {
    i.* = 1
    10
  }
  
  fn main() {
    let mut i = 0
    let s = f"{i},{bump(&i)}"
    let _ = s
  }
---
package main

import "fmt"

func bump(i *int) int {
	*i = 1
	return 10
}

func main() {
	i := 0
	fmtarg := i
	s := fmt.Sprintf("%d,%d", fmtarg, bump(&i))
	_ = s
}
