tests/spec/emit/snapshots/format_string_expression.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nfn test() {\n    let n = 5;\n    print(f\"Result: {n + 10}\")\n}\n"
---
package main

import "fmt"

func test() {
	n := 5
	print(fmt.Sprintf("Result: %v", n+10))
}
