tests/spec/emit/snapshots/format_string_guard_keeps_the_jump_target.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn label(n: int) -> Result<string, string> { Ok("x") }
  
  fn test(opt: Option<int>) -> Result<int, string> {
    let mut out = 0
    match opt {
      Some(x) if f"v{label(x)?}" == "vx" => { out = 1 },
      Some(_) => { out = 2 },
      None => { out = 3 },
    }
    Ok(out)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func label(_ int) lisette.Result[string, string] {
	return lisette.MakeResultOk[string, string]("x")
}

func test(opt lisette.Option[int]) lisette.Result[int, string] {
	out := 0
match:
	for {
		if opt.Tag == lisette.OptionSome {
			check := label(opt.SomeVal)
			if check.Tag != lisette.ResultOk {
				return lisette.MakeResultErr[int, string](check.ErrVal)
			}
			if "v"+check.OkVal == "vx" {
				out = 1
				break match
			}
			out = 2
			break match
		}
		out = 3
		break match
	}
	return lisette.MakeResultOk[int, string](out)
}
