tests/spec/emit/snapshots/format_string_mixed_operands_keep_sprintf.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn count(name: string, n: int) -> string {
    f"{name} has {n}"
  }
---
package main

import "fmt"

func count(name string, n int) string {
	return fmt.Sprintf("%s has %d", name, n)
}
