tests/spec/emit/snapshots/format_string_multiple.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  
  fn test() {
    let x = 10;
    let y = 20;
    fmt.Print(f"x = {x}, y = {y}")
  }
---
package main

import "fmt"

func test() {
	x := 10
	y := 20
	fmt.Printf("x = %d, y = %d", x, y)
}
