tests/spec/emit/snapshots/format_string_percent_no_interpolation.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test() -> string {
    f"100% done"
  }
---
package main

func test() string {
	return "100% done"
}
