tests/spec/emit/snapshots/format_string_rune_alias.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  
  type Ch = rune
  
  fn test() {
    let c: Ch = 'A';
    fmt.Print(f"{c}")
    fmt.Print(f"char: {c}")
  }
---
package main

import "fmt"

type Ch = rune

func test() {
	c := 'A'
	fmt.Printf("%c", c)
	fmt.Printf("char: %c", c)
}
